# q-evaluation-harness

./: .gitignore  LICENSE  README.md  pyproject.toml
datasets/: q_humaneval.jsonl  q_humaneval_test.jsonl
docs/: dataset_submission_guide.md  leaderboard.md  submission_guide.md
model_cards/: morganstanley_qqWen-1.5B-SFT.md  morganstanley_qqWen-14B-RL-Reasoning.md  morganstanley_qqWen-32B-RL-Reasoning.md  morganstanley_qqWen-3B-RL.md  morganstanley_qqWen-72B-RL.md  morganstanley_qqWen-7B-RL.md
outputs/: results_morganstanley_qqWen-1.5B-SFT.json  results_morganstanley_qqWen-14B-RL-Reasoning.json  results_morganstanley_qqWen-32B-RL-Reasoning.json  results_morganstanley_qqWen-3B-RL.json  results_morganstanley_qqWen-72B-RL.json  results_morganstanley_qqWen-7B-RL.json
scripts/: profile_hardware.py
src/: __init__.py  cli.py  constants.py
src/datasets/: base.py  loaders.py  registry.py  router.py
src/evaluation/: __init__.py  base.py  executor.py  metrics.py  q_python_executor.py  q_q_executor.py
src/models/: __init__.py  base.py  chat_template_utils.py  factory.py  generation_orchestrator.py  generation_strategy.py  huggingface_model.py  litellm_model.py  model_config.py  vllm_model.py
src/prompts/: base.py  templates.py
src/prompts/jinja_templates/: generic.j2  q_humaneval.j2  q_mbpp.j2
src/utils/: benchmarking.py  extraction.py  hardware_profiler.py  io.py  thinking_detector.py
tests/: __init__.py  conftest.py  test_cli_integration.py  test_cli_strategy_integration.py  test_execution_engine.py  test_extraction.py  test_generation_strategy.py  test_gpu_performance.py  test_huggingface_model.py  test_model_implementations.py  test_multi_gpu_optimization.py  test_smart_equality_preprocessing.py  test_unified_model_config.py
