[tool.poetry]
name = "q-evaluation-harness"
version = "1.0.0-alpha"
description = "Q Evaluation Harness for benchmarking LLMs on Q/kdb+ code generation"
authors = ["Erfan Miahi <mhi.erfan1@gmail.com>", "Andrew Morris <amorrison1@kx.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
qeval = "src.cli:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pykx = "4.0.0b3"
openai = "^1.0.0"
jupyter = "^1.0.0"
ipykernel = "^6.0.0"
datasets = "^4.0.0"
litellm = {version = "^1.0.0", extras = ["proxy"]}
python-dotenv = "^1.1.1"
jinja2 = "^3.1.0"
matplotlib = "^3.10.3"
transformers = "^4.30.0"
torch = "^2.0.0"
accelerate = "^1.9.0"
tqdm = "^4.65.0"
psutil = "^5.9.0"
vllm = "^0.10.0"
ray = "^2.8.0"
GPUtil = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
pytest-dotenv = "^0.5.2"
types-psutil = "^7.0.0.20250601"
types-tqdm = "^4.67.0.20250516"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests requiring real hardware"
]
env_files = [".env", ".env.test"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg-info",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true 
